商品詳細表示機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,20 +128,25 @@
     </div>
     <ul class='item-lists'>
 
-
-    <% if @items.present? %>
       <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
-        <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
-          <%# 商品が売れていればsold outを表示しましょう %>
+
+        <div class='item-img-content'>
+        <% if item.image.attached? %>
+         <%= link_to item_path(item.id), method: :get do %>
+          <%= image_tag(item.image, alt: "リンク切れ", class: "item-img") %>
+         <% end %>
+        <% else %>
+         <%= link_to item_path(item.id), method: :get do %>
+            <%= image_tag("no_image.png", alt: "リンク切れ", class: "item-img") %>
+          <% end %>
+        <% end %>
+
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-          <% end %>
+
 
         </div>
         <div class='item-info'>
@@ -156,28 +161,29 @@
             </div>
           </div>
         </div>
-        <% end %>
-      </li>
-      
 
-      <% else %>
-      <li class='list'>
-        <%= link_to '#' do %>
-        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            商品を出品してね！
-          </h3>
-          <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
+      </li>
+      <% end %>
+
+
+      <% if @items.empty? %>
+        <li class='list'>
+          <%= link_to '#' do %>
+          <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+          <div class='item-info'>
+            <h3 class='item-name'>
+              商品を出品してね！
+            </h3>
+            <div class='item-price'>
+              <span>99999999円<br>(税込み)</span>
+              <div class='star-btn'>
+                <%= image_tag "star.png", class:"star-icon" %>
+                <span class='star-count'>0</span>
+              </div>
             </div>
           </div>
-        </div>
-        <% end %>
-      </li>
+          <% end %>
+        </li>
       <% end %>
 
     </ul>
