--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,12 +7,14 @@
       <%= @item.name %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image, class:"item-box-img" %>
-
+      <%= image_tag @item.image ,class:"item-box-img" %>
+      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @item.present? %> 
       <div class="sold-out">
         <span>Sold Out!!</span>
       </div>
-
+      <% end %>
+      <%# //商品が売れている場合は、sold outを表示しましょう %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -23,16 +25,20 @@
       </span>
     </div>
 
-    <% if @item.user == current_user %>
-      <%= link_to "商品の編集", "#", method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
-    <%elsif user_signed_in?%>
-
-    <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
-
-    <%end%>
-
+    
+  <% if user_signed_in? %>
+    <% if current_user.id == @item.user_id %>
+    <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+    <p class="or-text">or</p>
+    <%= link_to "削除", "#", method: :delete, class:"item-destroy" %>
+    <% else %>
+      <%# 商品が売れていない場合はこちらを表示しましょう %>
+        <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
+      <%# //商品が売れていない場合はこちらを表示しましょう %>
+    <% end %>
+  <% end %>
+    
+    
     <div class="item-explain-box">
       <span><%= @item.explanation %></span>
     </div>
